# MatchCard-Game

./: CMakeLists.txt
AHMED/: MOURAD.CPP  tempCodeRunnerFile.CPP
Headers/: BonusCard.h  Card.cpp  Card.h  Deck.h  Game.cpp  Game.h  Main.cpp  PenaltyCard.h  Player.h  Source.cpp  StandardCard.h
